Conversation List Layout

--- a/demo/demo.component.html
+++ b/demo/demo.component.html
@@ -1,6 +1,6 @@
 <div class="row full-height">
   <div class="col-lg-3 col-md-4 border-right" style="padding: 0; height: 100%; overflow-y: scroll;">
-    <ngm-conversation-list [conversations]="conversationListItems"></ngm-conversation-list>
+    <ngm-conversation-list [conversations]="conversationListItems" [(activeItemId)]="activeItemId"></ngm-conversation-list>
   </div>
   <div class="col-lg-9 col-md-8">
 
