--- a/demo/demo.component.html
+++ b/demo/demo.component.html
@@ -1,9 +1,21 @@
 <div class="row full-height">
-  <div class="col-lg-3 col-md-4 border-right" style="padding: 0; height: 100%; overflow-y: scroll;">
-    <ngm-conversation-list [conversations]="conversationListItems" [(activeItemId)]="activeItemId"></ngm-conversation-list>
+  <div class="col-lg-3 col-md-4 border-right" style="padding: 0; height: 100%;">
+
+    <nav class="navbar navbar-default" style="margin: 0; top: 0; position: absolute; width: 100%; z-index: 100; border-right: none;">
+      <div class="container">
+
+      </div>
+    </nav>
+
+    <div class="" style="top: 50px; position: absolute; bottom: 0; overflow-y: scroll; width: 100%">
+      <ngm-conversation-list [conversations]="conversationListItems" [(activeItemId)]="activeItemId"></ngm-conversation-list>
+    </div>
+
   </div>
   <div class="col-lg-9 col-md-8">
-
+    <div class="" style="margin-left: -15px; margin-right: -15px;">
+      <ngm-conversation-detail [conversationDetailItem]="conversationDetailItem"></ngm-conversation-detail>
+    </div>
   </div>
 </div>
 
