--- a/src/components/messages-list/messages-list.component.html
+++ b/src/components/messages-list/messages-list.component.html
@@ -1,42 +1,12 @@
-<div class="ngm-messages-list"
-     #scrollContainer
-     ngm-scrolled-top (onScrolledTop)="onScrolledToMessage(message, i)"
-     style="height: 100%; overflow: hidden; overflow-y: scroll">
+<virtual-scroll [items]="messages" [childHeight]="64" (update)="viewPortItems = $event" (change)="loadMore($event)">
+
+
+  <ngm-messages-list-item *ngFor="let message of viewPortItems; let i = index" [message]="message" [author]="author"></ngm-messages-list-item>
+
+
 
   <div *ngIf="loader.loading" class="loading-indicator text-center">
     <i class="fa fa-circle-o-notch fa-spin fa-2x fa-fw" aria-hidden="true"></i>
   </div>
 
-  <div class="ngm-messages-list-inner" *ngIf="messages && messages.length > 0"
-    #itemList
-  >
-    <div
-      *ngFor="let message of messages; let i = index;"
-      class="ngm-message-list-item-wrapper {{message.cssClass}}"
-      [ngClass]="{
-         'from-me': (message.author.id === author.id),
-         'from-them': !(message.author.id === author.id)
-         }"
-      >
-
-      <div class="ngm-message-list-item ngm-message-bubble"
-           [ngClass]="{'ngm-message-bubble-arrow': !message.hideAvatar}"
-           ngm-tooltip [attr.data-toggle]="'tooltip'" [attr.data-placement]="message.author.id === author.id ? 'left': 'right'"
-           title="{{ message.insert | amTimeAgo }}"
-      >
-        <p>{{message.text}}</p>
-      </div>
-      <div class="clear"></div>
-      <div class="ngm-messages-avatar" *ngIf="!message.hideAvatar">
-        <img class="img-circle" src="{{message.avatar}}" *ngIf="message.avatar">
-        <img class="img-circle" *ngIf="!message.avatar" ngm-holder [config]="{text: 'TM', width: 20, height: 20, size: 6}">
-      </div>
-      <div class="clear"></div>
-
-    </div>
-  </div>
-
-
-
-
-</div>
+</virtual-scroll>
