--- a/demo/demo.component.html
+++ b/demo/demo.component.html
@@ -8,7 +8,7 @@
     </nav>
 
     <div class="" style="top: 50px; position: absolute; bottom: 0; overflow-y: scroll; width: 100%">
-      <ngm-conversation-list [conversations]="conversationListItems" [(activeItemId)]="activeItemId"></ngm-conversation-list>
+      <ngm-conversation-list [loadPerformer]="conversationLoader" [(activeItemId)]="activeItemId"></ngm-conversation-list>
     </div>
 
   </div>
