--- a/src/components/messages-list/messages-list.component.html
+++ b/src/components/messages-list/messages-list.component.html
@@ -1,11 +1,14 @@
-<virtual-scroll #scrollContainer ngm-scroll-down [scrollDownClass]="'scrollable-content'" *ngIf="messages" [items]="messages" [childHeight]="64" (update)="viewPortItems = $event" (end)="onEnd($event)" (change)="loadMore($event)">
+<div class="ngm-messages-list">
+  <virtual-scroll #scrollContainer *ngIf="messages" [items]="messages" [childHeight]="44" (update)="viewPortItems = $event" (end)="onEnd($event)" (change)="loadMore($event)">
 
 
-  <div *ngIf="loader.loading" class="loading-indicator text-center">
-    <i class="fa fa-circle-o-notch fa-spin fa-2x fa-fw" aria-hidden="true"></i>
-  </div>
+    <div *ngIf="loader.loading" class="loading-indicator text-center">
+      <i class="fa fa-circle-o-notch fa-spin fa-2x fa-fw" aria-hidden="true"></i>
+    </div>
 
-  <ngm-messages-list-item *ngFor="let message of viewPortItems; let i = index" [message]="message" [author]="author"></ngm-messages-list-item>
+    <ngm-messages-list-item *ngFor="let message of viewPortItems; let i = index" [message]="message" [author]="author"></ngm-messages-list-item>
 
 
-</virtual-scroll>
+  </virtual-scroll>
+</div>
+
