--- a/src/components/messages-list/messages-list.component.scss
+++ b/src/components/messages-list/messages-list.component.scss
@@ -26,6 +26,13 @@ ngm-messages-list-item {
   display: block;
 }
 
+.ghost-text {
+  margin-bottom: 5px;
+  line-height: 24px;
+  max-width: 60%;
+  padding: 10px 30px;
+}
+
 
 
 
