added text interpreter pipe to analyze the message text (+ support for links)

--- a/src/components/messages-list-item/messages-list-item.component.html
+++ b/src/components/messages-list-item/messages-list-item.component.html
@@ -12,7 +12,7 @@
        ngm-tooltip [attr.data-toggle]="'tooltip'" [attr.data-placement]="message.author.id === author.id ? 'left': 'right'"
        title="{{ message.insert | amTimeAgo }}"
   >
-    <p>{{message.text}}</p>
+    <p [innerHTML]="message.text | ngmTextInterpreter"></p>
   </div>
   <div class="clear"></div>
   <div class="ngm-messages-avatar" *ngIf="!message.hideAvatar">
