--- a/src/components/messages-list-item/messages-list-item.component.scss
+++ b/src/components/messages-list-item/messages-list-item.component.scss
@@ -39,6 +39,12 @@ ngm-messages-list-item {
     padding: 0;
     margin: 0;
     color: black;
+
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+
+    word-break: break-all;
+    hyphens: auto;
   }
 
 }
