--- a/src/components/messages-list/messages-list.component.scss
+++ b/src/components/messages-list/messages-list.component.scss
@@ -21,6 +21,7 @@ $message-margin-bottom: 20px !default;
   bottom: 0;
   left: 0;
   position: absolute;
+  overflow-x: hidden;
 }
 
 virtual-scroll{
