--- a/src/components/messages-list/messages-list.component.html
+++ b/src/components/messages-list/messages-list.component.html
@@ -6,7 +6,7 @@
       <i class="fa fa-circle-o-notch fa-spin fa-2x fa-fw" aria-hidden="true"></i>
     </div>
 
-    <ngm-messages-list-item *ngFor="let message of messages; let i = index" [message]="message" [author]="author"></ngm-messages-list-item>
+    <ngm-messages-list-item *ngFor="let message of messages; let i = index" [message]="message" [author]="author" [enableTooltip]="enableTooltips"></ngm-messages-list-item>
 
   </div>
 
